# Lab_Di_Programmazione

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Collection.cpp  Collection.h  Note.cpp  Note.h  NoteCountObserver.h  NoteManager.cpp  NoteManager.h  Observer.h  main.cpp
tests/: CMakeLists.txt  test_collections.cpp  test_note.cpp  test_note_manager.cpp
